debug
localhost:LKM:# make
make -C /lib/modules/6.12.41-current-bcm2711/build M=/home/noel/Desktop/TFG/LKM modules
make[1]: Entering directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
  CC [M]  /home/noel/Desktop/TFG/LKM/crypto_fd.o
/home/noel/Desktop/TFG/LKM/crypto_fd.c: In function ‘get_stat_str’:
/home/noel/Desktop/TFG/LKM/crypto_fd.c:217:9: error: implicit declaration of function ‘task_tty’; did you mean ‘start_tty’? [-Werror=implicit-function-declaration]
  217 |   tty = task_tty(task);
      |         ^~~~~~~~
      |         start_tty
/home/noel/Desktop/TFG/LKM/crypto_fd.c:217:7: warning: assignment to ‘struct tty_struct *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  217 |   tty = task_tty(task);
      |       ^
/home/noel/Desktop/TFG/LKM/crypto_fd.c:229:9: error: implicit declaration of function ‘tty_prgp’ [-Werror=implicit-function-declaration]
  229 |     if (tty_prgp(tty) == task_pgrp_nr(task)) {
      |         ^~~~~~~~
/home/noel/Desktop/TFG/LKM/crypto_fd.c:234:5: error: implicit declaration of function ‘put_tty’ [-Werror=implicit-function-declaration]
  234 |     put_tty(tty);
      |     ^~~~~~~
cc1: some warnings being treated as errors
make[3]: *** [scripts/Makefile.build:244: /home/noel/Desktop/TFG/LKM/crypto_fd.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.12.41-current-bcm2711/Makefile:1945: /home/noel/Desktop/TFG/LKM] Error 2
make[1]: *** [Makefile:224: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
make: *** [Makefile:19: all] Error 2
